--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "codemirror": "^5.25.2",
     "goethe": "^2.0.0",
     "mapbox-gl": "^0.37.0",
+    "prism-themes": "^1.0.0",
+    "prismjs": "^1.6.0",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
