--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "codemirror": "^5.25.2",
     "goethe": "^2.0.0",
+    "immutable": "^3.8.1",
     "mapbox-gl": "^0.37.0",
     "prism-themes": "^1.0.0",
     "prismjs": "^1.6.0",
@@ -14,7 +15,8 @@
     "react-mapbox-gl": "^1.9.3",
     "spectacle": "^2.0.0",
     "spectacle-code-slide": "^0.4.0",
-    "styled-components": "^1.4.6"
+    "styled-components": "^1.4.6",
+    "xml2js": "^0.4.17"
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
