--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "goethe": "^2.0.0",
     "immutable": "^3.8.1",
     "mapbox-gl": "^0.37.0",
+    "mapbox.js": "^3.1.0",
     "prism-themes": "^1.0.0",
     "prismjs": "^1.6.0",
     "prop-types": "^15.5.8",
