--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "styled-components-talk",
+  "name": "react-mapbox-talk",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,7 @@
   "dependencies": {
     "d3-request": "^1.0.5",
     "deck.gl": "^4.1.0",
-    "extravaganza": "^1.0.0-15",
+    "extravaganza": "^1.0.0-17",
     "luma.gl": "^4.0.1",
     "mapbox-gl": "0.38.0",
     "react-map-gl": "^3.0.4",
